--- a/pages/p5/954432.md
+++ b/pages/p5/954432.md
@@ -1,4 +1,4 @@
-### 学者：美中竞争不同于美苏、美日竞争(图)
+### 长租公寓爆雷不断：深陷泥淖的蛋壳如何收场？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,59 +6,63 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img src="https://img3.secretchina.com/pic/2020/10-8/p2791311a77313150-ss.jpg"/>
-  <br>
-   美中对峙正酣。（图片来源：自由亚洲电台）
-   <span id="hideid" name="hideid" style="color:red;display:none;">
-    <span href="https://www.secretchina.com">
-    </span>
+ <p>
+  【看中国2020年12月2日讯】从团购到外卖、P2P，再到共享打车、共享单车等，无数热钱催熟着一个个全新赛道。在不断涌入的海量资金推动下，每一个新赛道、新行业想脚踏实地的慢慢发展，都是一种奢望。一年起步、两年狂飙、三年合并、四年垄断……似乎这才是投资者心中正常的发展规律。但正是这种浮躁、急迫的心态，造成了太多难以预料的恶果——频频
+  <span href="https://www.secretchina.com/news/gb/tag/爆雷" target="_blank">
+   爆雷
+  </span>
+  的P2P平台就是最真实的写照。
+  <span id="hideid" name="hideid" style="color:red;display:none;">
+   <span href="https://www.secretchina.com">
    </span>
-  </br>
+  </span>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月8日讯】正值
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/美中" target="_blank">
-    美中
-   </span>
-  </strong>
-  对峙正酣之际，有美国学者建议，为了在美中竞争、乃至全球保持领先地位，美国应把握2020年代这个具有决定性作用的十年，在各个领域应对与中国的竞争，而不是陷入上个世纪美苏、美日竞争的经验主义。
+  而近段时间牵动千万人的热门话题，当属持续曝出负面信息的
+  <span href="https://www.secretchina.com/news/gb/tag/蛋壳" target="_blank">
+   蛋壳
+  </span>
+  。从传闻蛋壳资金链断裂到发布声明，再到多个办公地点人去楼空，只经历了极短的时间。看起来，蛋壳已经回天乏力，即将迎来自己的终局。蛋壳这一巨头的轰然倒下，也让长租公寓这一商业模式备受质疑。深陷泥淖的长租公寓，正站在悬崖边上。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  美国学者认为接下来的十年是美中竞争的决定性十年。中国已经超过西方早期竞争对手，拥有更强的
-  <span href="https://www.secretchina.com/news/gb/tag/经济" target="_blank">
-   经济
+  <strong>
+   过山车！蛋壳的魔幻之旅
+  </strong>
+ </p>
+ <p>
+  曾经站得有多高，如今跌得就有多重。用这句话形容蛋壳过山车般的发展历程，再合适不过。蛋壳的高光时期，简直就是巨头企业成长历程的“翻版”。从2015年1月成立，到2020年1月17日登陆美国纽交所，蛋壳仅仅只用了5年的时间。
+ </p>
+ <p>
+  5年时间，蛋壳从无到有，成长为一家市值高达20多亿美元的上市企业。而从蛋壳的财报看，其拥有41.9万套公寓。如果每套公寓平均居住2-3人，大概有数十万房东和近百万租户。在当时看来，意气风发的蛋壳的确是为人们提供了优质住所。但谁也没想到的是，蛋壳从上市到倒下，只经过了10个月的时间。
+ </p>
+ <p style="text-align: center;">
+  <img alt="持续曝出负面信息的长租公寓蛋壳，即将迎来自己的终局" src="https://img3.secretchina.com/pic/2020/11-23/p2823871a980549579-ss.jpg" style="height:337px; width:600px"/>
+  <br>
+   持续曝出负面信息的长租公寓蛋壳，即将迎来自己的终局（网络图片）
+  </br>
+ </p>
+ <p>
+  今年11月，蛋壳变幻莫测的魔幻之旅让人瞠目结舌。被曝
+  <span href="https://www.secretchina.com/news/gb/tag/资金链" target="_blank">
+   资金链
   </span>
-  影响力。随着美中双方对对方的公司进行严格的审查和制裁，经济竞争进入白热化阶段。学者指出，美国及西方国家应在政策、教育、科技等领域调整策略，积极应对，而不是受到上世纪美国与苏联、日本之间的竞争经验的制约。
- </p>
- <p>
-  美国智库信息技术和创新基金会（ITIF）前沿论坛研究员大卫．莫斯基拉（David Moschella）在十月七日的会议上表示，美国长期以来低估了来自中国的挑战，是因为将其与上世纪美国和苏联、日本之间的竞争相提并论，受到了经验主义和拒绝主义的影响。
- </p>
- <p>
-  他说：“来自中国的挑战是特殊的、多维度的，这不是与苏联和日本竞争的重演。在美中竞争中，中国拥有最大的市场和供应商，也是最主要经济竞争对手和最强大的地缘政治对手。苏联和日本都不是全面挑战者，不同时具备这四方面的优势。”
- </p>
- <p>
-  莫斯基拉指出，西方国家无法制定并实施出全面的政策来应对中国的挑战，是因为受其庞大市场和供应链的制约。
- </p>
- <p>
-  他说：“更多的公司从中国获得的利益比损失更大，总体而言，在各个领域当今的整合比竞争更多。”
+  断裂后，蛋壳公寓北京总部聚集数百人维权，包括租户、供应商、保洁、维修人员，现场一度发生肢体冲突。从那时候起，有关蛋壳“跑路”、“破产”的传闻就不绝于耳。随后，蛋壳官方微博发布声明称，“我们没有破产，也不会跑路！请不要信谣传谣！”看似义正言辞的话，却被讥讽——连发律师函的钱都没有了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -73,7 +77,7 @@
   </div>
  </center>
  <p>
-  莫斯基拉指出，当前只有传统制造业、网际网络、国防和政府部门四个领域将中国视为主要竞争对手，其它领域更倾向于向中国的市场和供应商开放。
+  果不其然，随后蛋壳的处境更加艰难。11月24日，据媒体报道，蛋壳成都线下办公室已人去楼空，仅在门上贴着二维码，维权房东被告知只能线上处理。此外，蛋壳公寓在南京办公地点也被曝人去楼空。这意味着，蛋壳几乎已经到了山穷水尽的地步，再无力掩盖自己穷途末路的事实。终局，正在加速逼近。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -88,7 +92,12 @@
   </div>
  </center>
  <p>
-  他还认为，为应对中国挑战，美国及其它西方国家应在多个领域制定出具体的应对策略，如重新定义市场，与印度结盟等。
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/长租公寓" target="_blank">
+    长租公寓
+   </span>
+   ，神话破灭
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -103,11 +112,7 @@
   </div>
  </center>
  <p>
-  “
-  <span href="https://www.secretchina.com/news/gb/tag/5G" target="_blank">
-   5G
-  </span>
-  是一个很好的例子。对中国来说，5G的国际市场很大，但如果美国、澳大利亚、日本等国家对中国的5G技术进行限制，那么中国就不能赢得大部分的国际市场。
+  身为业内的巨头，蛋壳滑入深渊，也将长租公寓这一模式推向了风口浪尖。长租公寓的模式，并没有什么稀奇。简单来说，就是预付模式：一次性收取租客一年甚至更长时间的预付租金，然后分月付给房东。可惜，预先收钱时有多舒坦，后面资金链断裂时就有多痛苦。归根结底，长租公寓这一模式本身存在太多不可控性。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -122,11 +127,7 @@
   </div>
  </center>
  <p>
-  “如果我们和印度合作，那么在软件、网际网络技术等领域的情况会完全不同。印度对美国来说是一个重要的
-  <span href="https://www.secretchina.com/news/gb/tag/科技" target="_blank">
-   科技
-  </span>
-  合作伙伴。”
+  被称为“长租公寓吹哨人”的爱我家前副总裁胡景晖，两年前就曾公开预警长租公寓爆仓危机。而针对蛋壳一事，他认为根本原因仍是自身商业模式的问题，和庞氏骗局无异。整体看来，长租公寓企业太过急于求成，对风险认识过于认识不足乃至轻松，最终导致一切都无可挽回。长租公寓的神话，也就此破灭。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -141,22 +142,7 @@
   </div>
  </center>
  <p>
-  莫斯基拉说，美国必须意识到在科技上保持领先的重要性，因为科技是国防、金融等行业的重要基础。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  安可国际大中华区主席、著名中国商业分析师詹姆斯．麦格雷戈（James McGregor）在会议中强调，美国应从中国模式中吸取经验并应用在与中国的竞争中。
+  更具迷惑性的，则是长租公寓企业为客户准备好的大坑——“租金贷”。这些企业拿着租客的贷款，做起滚雪球的生意。从金融的角度看，这些贷款分散、小额、滚动、个体间关联度极低，整体安全性较高，对金融机构来说是相对优质的资产。但雪崩之后，一无所有。而租客也深受其害，既有被房东赶出去的风险，还得继续还着贷款。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -175,7 +161,9 @@
   </ins>
  </center>
  <p>
-  他说：“美国应该进行全球化的洗牌，中国在国际上所做的努力保护了自身及市场，美国也应该这样做，因为这是旷日持久的竞争。”
+  <strong>
+   回归商业本质，脚踏实地发展方为王道
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -190,7 +178,7 @@
   </div>
  </center>
  <p>
-  麦格雷戈认为，对在中国的美国公司来说，他们应该利用中国来打败中国，以维持美国在全球的领先地位。
+  长租公寓的频频爆雷，显然已经敲响了警钟。这在告诉每一个新兴行业的参与者：凡事要回到商业的本质、财务的基础。其实很简单：利润=收入-成本费用，净现金=经营性收款-经营性支出。利润为本，现金为王的“脑回路”，总是不会错的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -205,7 +193,7 @@
   </div>
  </center>
  <p>
-  “你不能让这些企业在中国终止运营，因为一旦他们不在中国，就会被其它国家的公司替代，从而使美国失去全球领导力。这些在华企业应该进入中国市场赚取高额利润，将利润和技术带回国，这也是中国之前做的事。”
+  只有拿掉所谓的互联网创新外衣，回归金融的本源，才能最大限度地避免风险。如，是什么产品、面临多大的风险，就应该拿出相匹配的利润计提拨备以抵扣坏账，股东要拿出资本金抵扣非预期风险等。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -220,26 +208,7 @@
   </div>
  </center>
  <p>
-  美中贸易理事会总裁克雷格．艾伦（Craig Allen）表示，
-  <span href="https://www.secretchina.com/news/gb/tag/贸易战" target="_blank">
-   贸易战
-  </span>
-  第一阶段的成功显示了美国可以在某些领域与中国合作的可能性，这将为全球创新生态系统营造良好环境。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  版权所有©2006,RFA。经Radio Free Asia,2025 MSt.NW,Suite 300,Washington DC 20036许可进行再版。http://www.rfa.org。
+  总的来说，包括长租公寓在内的所有新兴行业要审视自身，并进入一个深度调整期。通过脚踏实地的发展，来规范自身，以博得长远未来。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -271,7 +240,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -303,13 +272,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948513.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948513.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948513.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/08/948513.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954432.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954432.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954432.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/954432.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/948513.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/954432.md' width='0px' height='0px'/>
