--- a/pages/p7/938210.md
+++ b/pages/p7/938210.md
@@ -1,4 +1,4 @@
-### 习近平急喊“绝不答应”透恐慌？ 蔡霞：他怕混不下去(图)
+### 17则古训赠当今(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/9-4/p2769171a308804463-ss.jpg"/>
+  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   9月3日，习近平在座谈会上一连说了五个“中国人民绝不答应”。有分析认为，对应着国际新形势下中共的极度恐惧。（图片来源：视频截图）
+   行舍其华，言去其辩。（看中国：手绘插画 志清）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,89 +21,67 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  电影《永恒的五十分钟》（长春电视插播事件改编）](http://141.164.51.119:10000/videos/news/ComingForYou-2.html)
-
-#### [ 🔥  蓬佩奥、史达伟就有关中共军事霸凌等问题的讲话和回答记者问（字幕版）](http://141.164.51.119:10000/videos/news/pompeo7.html)
-
-#### [ 🔥  抗争成功典范：2016年湖北仙桃十万人游行示威反垃圾焚烧厂（项目取消，市长下课）](http://141.164.51.119:10000/videos/news/xiantao.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月6日讯】（看中国记者苗薇综合报导）美国切割中共和中国人民，引发中共当局强烈反应，
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-    习近平
+   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
+    古训
    </span>
   </strong>
-  近日一口气连说五个“
+  是先人
   <strong>
-   绝不答应
+   智慧
   </strong>
-  ”。然而在另一个场合，习近平又承诺中国将扩大对外开放。前中共中央党校教授
+  的
   <strong>
-   蔡霞
+   结晶
   </strong>
-  表示，美国此举让习害怕，担心“混不下去了”。她说，中国经济目前的现状也迫使习近平“不得不开门”。
+  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  近来美国政府积极区分“
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  人民”与“中国共产党”，并改称习近平为“中共总书记”，而非中国国家主席，就在凸显其权力并非来自人民。美国国务卿蓬佩奥近日在捷克议会致词时，再次批评“中共始终把自己放在首位，中共已完全脱离中国人民”。
+  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
  </p>
  <p>
-  9月3日是“纪念中国人民抗日战争暨世界反法西斯战争胜利七十五周年”，
-  <span href="https://zh.wikipedia.org/zh-hans/%E4%B9%A0%E8%BF%91%E5%B9%B3" target="_blank">
-   习近平
-  </span>
-  在北京大会堂举行的座谈会上说，“任何人、任何势力企图把中国共产党和中国人民割裂开来、对立起来，中国人民都绝不答应！”
+  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
+  <br>
+   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
+  </br>
  </p>
  <p>
-  作为中共最高领导人的习近平亲自出面代表“中国人民
-  <span href="https://www.secretchina.com/news/gb/tag/绝不答应" target="_blank">
-   绝不答应
-  </span>
-  ”，也显示了中共与中国人民的关系这个问题相当严重。
+  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
+  <br>
+   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
+  </br>
  </p>
  <p>
-  就在习近平连说“五个绝不答应”之后，9月4日，习近平又在北京举行的全球服务贸易峰会上致词说，“中国将坚定不移扩大对外开放”，支持组建全球服务贸易联盟，并在北京打造国家服务业的扩大开放综合示范区。而此前，中南海召开经济学者座谈会，习近平将“经济内循环”改称为“国民经济循环”，试图掩饰中共闭关锁国的经济策略。
+  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
+  <br>
+   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
+  </br>
  </p>
  <p>
-  被开除党籍的前中共中央党校教授
-  <span href="https://www.secretchina.com/news/gb/tag/蔡霞" target="_blank">
-   蔡霞
-  </span>
-  对自由亚洲电台表示，“把中共和中国人民区分开，这是西方国家对华战略和对华政策的重大思路变化。习特别害怕这个区分，一定要把这个话挡在大陆之外，不让声音传进国内。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  蔡霞说，一旦把中共依附在中国人民身上的本质暴露，中国人民思想觉醒，习近平知道就“真的就混不下去了”。
+  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
+  <br>
+   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
+   <br>
+    <br>
+     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
+     <br>
+      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
+     </br>
+    </br>
+   </br>
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -118,7 +96,9 @@
   </div>
  </center>
  <p>
-  习近平9月4日又承诺扩大对外开放。对此蔡霞认为，习政府喊著“开放”、“全球化”，都是“欺骗中国人民”的。面对中国国内大规模失业的危机，“开门”是习近平唯一的选项。
+  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
+  <br/>
+  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -133,7 +113,9 @@
   </div>
  </center>
  <p>
-  “从去年开始，中国经济的三架马车（投资、出口、消费）就彻底歇火，中国国内经济处于半瘫痪状态。如果中国不对外开放，国内将面临大量的失业没有办法解决。”
+  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
+  <br/>
+  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -148,11 +130,9 @@
   </div>
  </center>
  <p>
-  蔡霞说，“习近平面对的是全球化、高科技时代，一旦自己关门、别人也对他关门（中美
-  <span href="https://www.secretchina.com/news/gb/tag/贸易战" target="_blank">
-   贸易战
-  </span>
-  、疫情后全球去中国化的产业链重整），他就活不下去了。”
+  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
+  <br/>
+  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -167,7 +147,48 @@
   </div>
  </center>
  <p>
-  同时，蔡霞也对中共当局的所谓“内循环”感到悲观，“基本社会保障又没有建立起来，住房、养老、教育、生病、医疗，这几大块政府基本没让人民能安心生活。连我是个中产都要把口袋捂得紧，担心哪天生场大病。”
+  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
+  <br/>
+  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
+  <br/>
+  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
+  <br/>
+  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
+  <br/>
+  <br/>
+  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
+  <br/>
+  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -186,7 +207,9 @@
   </ins>
  </center>
  <p>
-  蔡霞表示，这些根本原因让中国百姓不敢随便消费，一旦大规模失业潮到来，中国经济“内循环”根本是空谈。
+  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
+  <br/>
+  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -201,7 +224,9 @@
   </div>
  </center>
  <p>
-  在美国的人权组织“公民力量”创始人杨建利则分析，习近平现在大声疾呼不要把人民与党分离，还有前一周外交部发言人赵立坚宣称“中国人民就是中国共产党的铜墙铁壁”的说法，证明中共害怕政权的非法性被揭穿。
+  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
+  <br/>
+  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -216,7 +241,9 @@
   </div>
  </center>
  <p>
-  杨建利说：“现在美国对华政策的决策者非常理解中国共产党是绑架了中国人民，某种意义是绑匪。正因为这原因，中共领导人非常紧张，他一向自诩以‘中国人民'说话，若把（中共、中国人民）两者分开，直接就威胁了政权的安全。”
+  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
+  <br/>
+  【今译】只知前进不知后退，是招取祸败的道途。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -231,7 +258,26 @@
   </div>
  </center>
  <p>
-  杨建利认为，中共想继续利用如过去加入世界贸易组织的方式，滥用国际规则尝尽甜头，却开放而不改革，即政治封闭、经济单向开放。中共将会遇到比以前更大的阻力。美国已经觉醒，欧洲国家也逐渐觉醒，中共外长王毅这次欧洲访问失败，已经证明国际形势已不同，中共持续假开放而不改革，世界各国已经不再天真。
+  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
+  <br/>
+  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
+  <br/>
+  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -263,7 +309,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -295,13 +341,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/945346.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/945346.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/945346.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/06/945346.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p2/945346.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
