--- a/pages/nf4514/n12590387.md
+++ b/pages/nf4514/n12590387.md
@@ -33,7 +33,7 @@
  在威斯康星，12月1日川普法律团队向该州最高法院提起诉讼，指控该州大量的缺席选票被非法计入，总计约有22万张。
 </p>
 <p>
- 周一托马斯‧莫尔协会（Thomas More Society）也在华盛顿DC举行新闻发布会。三名举报人在现场现身，提供大量证据，证明选举官员曾采取的非法行动以及USPS（美国邮政工人工会）的非法行为如何影响了选举结果。
+ 周二托马斯‧莫尔协会（Thomas More Society）也在华盛顿DC举行新闻发布会。三名举报人在现场现身，提供大量证据，证明选举官员曾采取的非法行动以及USPS（美国邮政工人工会）的非法行为如何影响了选举结果。
 </p>
 <p>
  左媒大肆报道司法部长威廉‧巴尔（William Barr）称目前没看到大范围选举舞弊的证据，对此司法部发出声明驳斥，并说
@@ -158,7 +158,7 @@
  前联邦检察官、德州知名律师西德尼‧鲍威尔（Sidney Powell）透露，参与她的2020年选举舞弊法律诉讼活动的证人正受到威胁，甚至有证人遭殴打受伤而住院。
 </p>
 <p>
- 周一（12月1日），鲍威尔接受福克斯新闻采访十透露了她目前遇到的难题。她说潜在的证人有失去工作的危险，他们的“生命受到威胁”。鲍威尔还说，一名证人已被“殴打并住院”。
+ 周二（12月1日），鲍威尔接受福克斯新闻采访时透露了她目前遇到的难题。她说潜在的证人有失去工作的危险，他们的“生命受到威胁”。鲍威尔还说，一名证人已被“殴打并住院”。
  <br/>
  “（威胁和恐吓）对挺身而出的人造成各种各样的影响。”她接着说：“民主党人不喜欢举报人，他们只喜欢撒谎者，他们声称自己是举报人。”
 </p>
@@ -314,7 +314,13 @@
  12月3日，川普团队将参加该州地方一审法院法官安排的证据听证会，当庭会呈上大量选举舞弊指控。
 </p>
 <p>
- 内华达州也是今年大选的关键战场州，频频有吹哨人和选民爆出选举舞弊实证。川普总统早前也表示，内华达州是虚假选票的藏污地。#
+ 内华达州也是今年大选的关键战场州，频频有吹哨人和选民爆出选举舞弊实证。川普总统早前也表示，内华达州是虚假选票的藏污地。
+</p>
+<p>
+ 【大选更新12·1】
+ <ok href="http://www.epochtimes.com/gb/20/12/1/n12587667.htm">
+  请点击这里
+ </ok>
 </p>
 <p>
  责任编辑：叶紫微
