--- a/pages/nf4514/n12587667.md
+++ b/pages/nf4514/n12587667.md
@@ -37,7 +37,7 @@
  <ok href="https://www.epochtimes.com/gb/tag/%E5%B7%9D%E6%99%AE.html">
   川普
  </ok>
- 的投票率却是负的：-30%。这说明计票软件将至少30%的川普选票转移给了拜登。希瓦说这是真实的犯罪。
+ 的投票率却是负的：-30%。这说明计票软件将至少30%的川普（特朗普）选票转移给了拜登。希瓦说这是真实的犯罪。
 </p>
 <p>
  即使存在这样的选举欺诈质疑，亚利桑那州政府仍宣布认证大选结果，这遭到了
@@ -107,7 +107,7 @@
   “请随时参加。西德尼·鲍威尔和我在讲话后将在时间允许的范围内回答尽可能多的问题。为唐纳德·川普、自由与真理而战。”
  </p>
  <p>
-  “我们希望很多爱国者能够够参加，我们可以听到你们的问题。你们的声音很重要。我们荣誉与共。”
+  “我们希望很多爱国者能够参加，我们可以听到你们的问题。你们的声音很重要。我们荣誉与共。”
  </p>
  <blockquote class="twitter-tweet">
   <p dir="ltr" lang="en">
@@ -446,7 +446,7 @@
        邮政卡车司机：14.4～28.8万张预制选票
       </h3>
       <p>
-       在美东时间下午2点，宾夕法尼亚州一名邮政卡车司机将作证，早在10月份，已经有跨越三个州的14.4～28,8万张预制选票被装运。
+       在美东时间下午2点，宾夕法尼亚州一名邮政卡车司机将作证，早在10月份，已经有跨越三个州的14.4～28.8万张预制选票被装运。
       </p>
       <h3>
        川普警告亚利桑那州州长：共和党人会记住！
