--- a/pages/nsc412/n12590387.md
+++ b/pages/nsc412/n12590387.md
@@ -52,6 +52,27 @@
  情况的实时更新：
 </h4>
 <h3>
+ 鲍威尔林伍德将举行新闻发布会
+</h3>
+<p>
+ 美东时间周三（12月2日）下午14:05 ，前联邦检察官、德州知名律师鲍威尔和林伍德律师将举行新闻发布会。新唐人、大纪元将进行现场直播（中文同声翻译）。
+</p>
+<div class="video_fit_container">
+</div>
+<p>
+ 林伍德律师周二（1日）发推说，周三下午14:05，将与鲍威尔律师在乔治亚州阿尔法雷塔市（Alpharetta）Wills路11915号联合举行新闻发布会，欢迎人们参加，讲话后将尽可能回答所有问题。
+</p>
+<p>
+ 林伍德呼吁川普总统，如果立法者、法院和国会不遵守宪法，就宣布有限的戒严令，以举行新的大选和保护人民的选举权。
+</p>
+<p>
+ 上周三（25日），鲍威尔在乔治亚州和密歇根州提起诉讼，将两州州长、州务卿及一些选举官员告上法庭，并发布大量证词，曝光2020年
+ <ok href="https://www.epochtimes.com/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E9%80%89.html">
+  美国大选
+ </ok>
+ 各种舞弊行为，以及多米尼（Dominion）投票机将投给川普的票转给拜登等欺诈行为。
+</p>
+<h3>
  川普：将前往乔治亚州参加集会
 </h3>
 <p>
