--- a/pages/soh6/449362.md
+++ b/pages/soh6/449362.md
@@ -59,7 +59,11 @@
   证人是通过发推文的方式曝光该舞弊经过的。他说，通过拉近镜头，人们可以看到该员工的胸牌上写着“县技术人员”的职务。据媒体调查，这名员工名叫考尔瑞（Xavier Khouri），来自乔州布福德市，是Dominion投票系统在该县的工作人员。
  </p>
  <h5>
-  11月29日，联邦法官巴顿（Timothy Batten）发布紧急命令，暂时禁止乔州各县清除或重置任何Dominion投票机上用于2020年选举的任何软件或数据。11月30日，巴顿法官宣布将在12月4日（周五）就鲍威尔律师11月25日递交的选举舞弊“重磅”诉状召开
+  11月29日，联邦法官巴顿发布紧急命令，暂时禁止乔州各县清除或重置任何Dominion投票机上用于2020年选举的任何软件或数据。11月30日，巴顿法官宣布将在12月4日（周五）就鲍威尔律师11月25日递交的选举舞弊诉状召开
+  <ok href="/term/1465">
+   听证会
+  </ok>
+  。12月1日，巴顿法官以鲍威尔向上级法院提出上诉为由，推迟了原定于12月4日的
   <ok href="/term/1465">
    听证会
   </ok>
