--- a/pages/nsc412/n12590387.md
+++ b/pages/nsc412/n12590387.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12.2】鲍威尔林伍德召开发布会" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/145289-600x400.jpg"/>
+<div><img alt="【大选更新12.2】鲍威尔：每一位爱国者都应站出来" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/Epoch_Times-Giuliani-Powell-0A4A0668-700x420-600x400.jpg"/>
 <div class="caption">
- 周三，著名律师西德尼‧鲍威尔（Sidney Powell）将和林伍德一起召开新闻发布会。(MANDEL NGAN / Getty Image)
+ 2020年12月2日，著名律师西德尼‧鲍威尔（Sidney Powell）和林伍德一起召开新闻发布会。图为2020年11月19日，在华盛顿共和党全国委员会总部举行的新闻发布会上，悉妮·鲍威尔（Sidney Powell）律师在川普（特朗普）律师、前纽约市市长鲁迪·朱利安尼（L）的陪同下对媒体讲话。(Charlotte Cuthbertson/The Epoch Times)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
