--- a/pages/p4/954518.md
+++ b/pages/p4/954518.md
@@ -1,4 +1,4 @@
-### 17则古训赠当今(图)
+### 听证会就是川普胜利的标志(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="川普" src="https://img3.secretchina.com/pic/2020/11-28/p2827781a425991841-ss.jpg" style="height:400px; width:600px"/>
   <br>
-   行舍其华，言去其辩。（看中国：手绘插画 志清）
+   11月23日，密西根州政府外川普支持者集会（图片来源：JEFF KOWALSKY/AFP via Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,59 +29,38 @@
   </div>
  </div>
  <p>
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
-    古训
-   </span>
-  </strong>
-  是先人
-  <strong>
-   智慧
-  </strong>
-  的
-  <strong>
-   结晶
-  </strong>
-  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
+  【看
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  2020年12月3日讯】在中国，老人们常说这样一句话：久走夜路必撞鬼。尤其在中国的农村，这种事情屡见不鲜。那为什么走夜路会撞上鬼，而白天却撞不上呢？
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
+  这里面就告诉了人们一个真相，鬼害怕白天，进一步说是怕光。所以我们可以看到在人间，那些有毒的动物，如：毒蛇、蝎子、蚊子等等都是生活在阴暗处或夜间；再看看那些在人间偷、抢、吸毒等等做坏事的坏人，他们也都是在背地或夜间干坏事。
  </p>
  <p>
-  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
-  <br>
-   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
-  </br>
+  在美国，左派势力已经相当强大，他们控制了美国很多的精英阶层，华尔街、好莱坞、高科技，还有民间的黑帮组织；特别是他们牢牢控制了美国的各大媒体和社交媒体。
  </p>
  <p>
-  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
-  <br>
-   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
-  </br>
+  不知大家是否看过大纪元推出的《魔鬼在统治着我们的世界》这本书，这本书中详细的描述了共产邪灵是如何控制整个世界的。而美国就是除中国以外邪灵要控制的重点。
  </p>
  <p>
-  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
-  <br>
-   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
-  </br>
+  所以美国的左媒在四年中对
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
+  </span>
+  (特朗普)和他的团队进行了极其邪恶的造谣、诽谤、诬陷，封杀真相言论等等。而对拜登家族的“硬盘门”丑闻，对大选的舞弊，对左派精英与中共、伊朗等邪恶国家的勾肩搭背却只字不提。
  </p>
  <p>
-  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
-  <br>
-   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
-   <br>
-    <br>
-     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
-     <br>
-      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
-     </br>
-    </br>
-   </br>
-  </br>
+  川普团队和一些民间团体在近段时间尽管曝光了很多拜登家族的丑闻，曝光了很多民主党和左派的邪恶行为，但是，他们曝光的力度、广度都是很有限的，因为这些真相都被美国的各大媒体所掩盖，被社交媒体所封杀了。也就是说，在美国
+  <span href="https://www.secretchina.com/news/gb/tag/大选" target="_blank">
+   大选
+  </span>
+  的正邪较量中，美国的左翼媒体一直是占据主动、占据着优势。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -96,9 +75,7 @@
   </div>
  </center>
  <p>
-  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
-  <br/>
-  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
+  然而今天我们却看到了川普所代表的正义力量出现了大反转的场景，宾州参议院共和党政策委员会于11月25日举行了听证会；亚利桑那州立法机构在11月30日举行选举诚信听证会；密歇根州议会也在12月1日举行了听证会。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,9 +90,11 @@
   </div>
  </center>
  <p>
-  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
-  <br/>
-  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
+  这三场听证会的成功举办，攻破了左翼势力的防线，揭露了左翼势力与中共、伊朗的邪恶国家相互勾结、勾肩搭背，干扰着美国大选，各种选举
+  <span href="https://www.secretchina.com/news/gb/tag/舞弊" target="_blank">
+   舞弊
+  </span>
+  的真相。听证会上很多证人出庭作证，他们用自己的尊严，甚至是自己的生命发誓，来证明他们证词的真实性。左翼势力的流氓手段与邪恶的行为，都在听证会上得到了曝光。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,9 +109,7 @@
   </div>
  </center>
  <p>
-  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
-  <br/>
-  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
+  朋友们，这几个州听证会的成功举办，那真相就如同溃坝的洪水，势不可挡。左派的各大媒体再也无法掩盖和歪曲事实的真相。因为美国以及其他更多国家的民众都看到了这几场听证会，都了解了真相。大家想一想，真相一旦大白，这就如同把操控左翼势力的魔鬼，曝光在了光天化日之下，那这些魔鬼还能存活吗？这些魔鬼一旦化掉，那左翼势力顷刻间就会土崩瓦解。到了那个时候，谁胜谁负不就见分晓了吗？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -147,9 +124,7 @@
   </div>
  </center>
  <p>
-  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
-  <br/>
-  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
+  那有的朋友可能会说：你谈的这些是事实，也有一定的道理。虽然舞弊事件被大量曝光，但是我们看到，美国的第三巡回法庭已经把川普团队的法律诉讼驳回了，这也是事实吧！这难道不是拜登他们的胜利吗？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -164,31 +139,7 @@
   </div>
  </center>
  <p>
-  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
-  <br/>
-  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
-  <br/>
-  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
-  <br/>
-  <br/>
-  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
-  <br/>
-  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
+  没错，在11月27日第三巡回上诉法庭法官Stephanos Bibas周五驳回了川普的法律上诉，于长达21页的法律文件中写道：“自由、公正的选举是美国民主命脉，选举不公是很严重的指控，称选举不公平并不意味着它真的不公平，指控需要具体事证指控，而我们(法院)都没看到。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,9 +158,7 @@
   </ins>
  </center>
  <p>
-  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
-  <br/>
-  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
+  为什么在听证会上川普竞选律师团负责人朱利安尼把如此多的证人证据呈现给了大家，而第三巡回法庭的法官却说：他们没看到证据。在我看来这是川普团队有意不拿出证据。为什么？如果拿出证据，找来证人；一旦第三巡回法庭受理了，那可坏了，正中了拜登的下怀，拜登的那些庞大律师团队立即就会反击。这样一来就会在第三巡回法庭进行一场法律大战，无论结局如何，都是拜登他们的胜利。为什么？因为他们把最高联邦法院最终裁决的时间耗完了，1月20日时间一到拜登自然就当选、就胜利了。所以现在对于川普来说，时间是最珍贵的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,9 +173,7 @@
   </div>
  </center>
  <p>
-  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
-  <br/>
-  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
+  11月27日川普律师Jenna Ellis周五在推文中提到，她接下来计划将向美国最高法院提起上诉。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -241,9 +188,7 @@
   </div>
  </center>
  <p>
-  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
-  <br/>
-  【今译】只知前进不知后退，是招取祸败的道途。
+  我想川普律师团队被第三巡回法庭驳回诉讼是在敌我交战上的一种策略，以退为进，引诱和麻痹敌方，目的是为了尽快诉讼到最高法院取得最终的胜利。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,9 +203,7 @@
   </div>
  </center>
  <p>
-  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
-  <br/>
-  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
+  朋友们，如今正邪大战已经到了关键时刻，作为正义之士，我们必须坚信邪不压正，坚定与神同行天灭中共，坚信联邦最高法院的正义，坚信川普和他的团队必胜！川普加油！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -274,23 +217,7 @@
    </center>
   </div>
  </center>
- <p>
-  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
-  <br/>
-  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
+ (文章仅代表作者个人立场和观点)
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -341,13 +268,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954518.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954518.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954518.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/03/954518.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p4/954518.md' width='0px' height='0px'/>
